--- a/src/pages/add-item/add-item.html
+++ b/src/pages/add-item/add-item.html
@@ -7,28 +7,28 @@
 
 <ion-content padding>
 
-<table>
+  <table>
     <tr>
       <td>Nome:</td>
-      <td><input type="text" style="margin-left: 2%; width: 88%;" [(ngModel)]="nome"> </td> 
+      <td><input type="text" style="margin-left: 2%; width: 88%;" [(ngModel)]="nome_item"> </td>
     </tr>
 
     <tr>
       <td>Quantidade:</td>
       <td>
-        <button ion-button class="botaoLista" >-</button>
-        <input type="text" class="texto2" [(ngModel)]="qtd"/>
-        <button ion-button class="botaoLista" >+</button>
-      </td>            
+        <button ion-button class="botaoLista">-</button>
+        <input type="text" class="texto2" [(ngModel)]="qtd" />
+        <button ion-button class="botaoLista">+</button>
+      </td>
     </tr>
 
     <tr>
-        <td style="float: right;">Observação:</td>
-        <td><textarea [(ngModel)]="obs" rows="10" cols="30" style="margin-left: 2%; margin-top: 3%;"></textarea></td>
+      <td style="float: right;">Observação:</td>
+      <td><textarea [(ngModel)]="obs" rows="10" cols="30" style="margin-left: 2%; margin-top: 3%;"></textarea></td>
     </tr>
   </table>
-  <br/><br/><br/>  
-  <button ion-button full (click)="adicionar()">Adiciona na Lista</button>
+  <br /><br /><br />
+  <button ion-button full (click)="addItem()">Adiciona na Lista</button>
 
 
 
