--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -14,6 +14,7 @@
   </table>
 
   <table *ngFor="let l of lista | async">
+    
     <tr *ngFor="let i of l.itens">
       <td class="coluna1">{{i.nome_item}}</td>
         <td>
@@ -28,7 +29,7 @@
   </table>
   
   <ion-fab bottom right>
-    <button ion-fab collor="primary" (click)="addItem()">
+    <button ion-fab collor="primary" (click)="btAddItem()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
