--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -16,12 +16,8 @@
   <table *ngFor="let l of lista | async">
     
     <tr *ngFor="let i of l.itens">
-      <td class="coluna1">{{i.nome_item}}</td>
-        <td>
-          <button ion-button class="botaoLista" (click)="diminuirQtd(l.id,i)">-</button> 
-          <input type="text" class="texto" value="{{i.qtd}}"/> 
-          <button ion-button class="botaoLista" (click)="aumentarQtd(l.id,i)">+</button>
-        </td>
+      <td class="coluna1"><label (click)="editarItem(i)">{{i.nome_item}}</label></td>
+        <td class="coluna2"><Label>{{i.qtd}}</Label></td> 
         <td class="coluna3">
           <ion-checkbox color="secondary" checked="true"></ion-checkbox>
         </td>
@@ -34,7 +30,7 @@
     </button>
   </ion-fab>
 
-
+ 
 
 
 
