--- a/src/pages/add-item/add-item.html
+++ b/src/pages/add-item/add-item.html
@@ -6,32 +6,34 @@
 
 
 <ion-content padding>
-
   <table>
+    <tr *ngIf="editar == true">
+      <td>Nome da Lista: </td>
+      <td><input class="texto3"></td>
+    </tr>
+
+
     <tr>
       <td>Nome:</td>
-      <td><input type="text" style="margin-left: 2%; width: 88%;" [(ngModel)]="nome_item"> </td>
+      <td><input class="texto3"  [(ngModel)]="nome_item"> </td>
     </tr>
 
     <tr>
       <td>Quantidade:</td>
       <td>
         <button ion-button class="botaoLista" (click)="diminuirQtd()">-</button> 
-        <input type="text" class="texto" value="{{qtd}}"/> 
+        <input type="text" class="texto2" value="{{qtd}}"/> 
         <button ion-button class="botaoLista" (click)="aumentarQtd()">+</button>
       </td>
     </tr>
 
     <tr>
       <td style="float: right;">Observação:</td>
-      <td><textarea [(ngModel)]="obs" rows="10" cols="30" style="margin-left: 2%; margin-top: 3%;"></textarea></td>
+      <td><textarea [(ngModel)]="obs" rows="10" cols="30" style="margin:2% 0%"></textarea></td>
     </tr>
   </table>
   <br /><br /><br />
-  <button ion-button full (click)="addItem()">Salvar</button>
-  
+  <button ion-button full style="margin-bottom: 3%;" (click)="addItem()">Salvar</button>
   <button ion-button full color="danger" (click)="removeItem()">Deletar</button>
-
-
 
 </ion-content>
