--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Listas</ion-title>
+    <ion-title style="text-align:center">Listas</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -10,4 +10,14 @@
       <p (click)="goList(i.id)">{{i.nome_lista}}</p>      
     </ion-item>
   </ion-list>
+
+<ion-fab bottom right>
+  <button ion-fab collor="primary" (click)="goAddLista()">
+    <ion-icon name="add"></ion-icon>
+  </button>
+</ion-fab>
+
+
 </ion-content>
+
+
