--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{lista.nome_lista}}</ion-title>
+    <ion-title style="text-align:center; margin-right: 10%;">{{lista2.nome_lista}}</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -15,12 +15,12 @@
 
   <table >
     
-    <tr *ngFor="let i of lista"> 
+    <tr *ngFor="let i of lista2.itens"> 
       <td class="coluna1"><label (click)="editarItem(i)">{{i.nome_item}}</label></td>
-        <td class="coluna2"><Label (click)="editarItem(i)">{{i.qtd}}</Label></td> 
-        <td class="coluna3">
-          <ion-checkbox color="secondary" checked="{{i.comprado}}" (click)="comprou(l.id,i)"></ion-checkbox>
-        </td>
+          <td class="coluna2"><Label (click)="editarItem(i)">{{i.qtd}}</Label></td> 
+          <td class="coluna3">
+          <ion-checkbox color="secondary" checked="{{i.comprado}}" (click)="comprou(i)"></ion-checkbox>
+        </td> 
     </tr>
   </table>
   
