--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -1,4 +1,3 @@
-
 <ion-header>
   <ion-navbar>
     <ion-title>perfil</ion-title>
@@ -6,11 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list >
-    <ion-item *ngFor="let item of listaUsuarios | async">
-     <p> {{item.nome}}</p>
-     <p> {{item.idade}}</p>
-    </ion-item>
-  </ion-list>
-
+  <button ion-button full color="danger" (click)="logout()">Sair</button>
 </ion-content>
