--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title style="text-align:center; margin-right: 10%;">{{lista2.nome_lista}}</ion-title>
+    <ion-icon name="ios-alert-outline" class="logo1" (click)="btEditList()"></ion-icon>
   </ion-navbar>
 </ion-header>
 
