--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -5,5 +5,6 @@
 </ion-header>
 
 <ion-content padding>
+  <p>Usuario: {{user.displayName}}</p>
   <button ion-button full color="danger" (click)="logout()">Sair</button>
 </ion-content>
