correções de bugs

--- a/src/pages/add-lista/add-lista.html
+++ b/src/pages/add-lista/add-lista.html
@@ -54,7 +54,7 @@
   <ion-grid>
     <ion-row>
       <ion-col col-4> <p>Nome Lista:</p> </ion-col>
-      <ion-col col-8> <p>{{lista2.nome_lista}}</p> </ion-col>
+      <!--<ion-col col-8> <p>{{lista2.nome_lista}}</p> </ion-col>-->
     </ion-row>
 
     <ion-row>
