--- a/src/pages/add-item/add-item.html
+++ b/src/pages/add-item/add-item.html
@@ -5,58 +5,62 @@
   </ion-navbar>
 </ion-header>
 
-
 <ion-content padding *ngIf="editar == false">
   <table *ngFor="let i of itensAdd; let ind = index">    
     <tr>
-      <td>Nome:</td>
-      <td><input class="textoItem" [(ngModel)]="i.nome_item"> </td>
+      <td> Nome: </td>
+      <td> <input type="text" class="textoItem" [(ngModel)]="i.nome_item" placeholder="*Campo Obrigatorio" > </td>
+      <td> <ion-icon class="icoLixo" name="trash" (click)="delItenArray(ind)" style="margin-left: 6%;"> </ion-icon> </td>
     </tr>
 
     <tr>
-      <td>Quantidade:</td>
+      <td> Quantidade: </td>
       <td>
-        <button ion-button class="botaoLista" (click)="diminuirQtd(ind)">-</button> 
-        <input class="textoItem2" [(ngModel)]="i.qtd"/> 
-        <button ion-button class="botaoLista" (click)="aumentarQtd(ind)">+</button>
+        <button ion-button class="botaoLista" (click)="decrementQtd(ind)"> - </button> 
+        <input type="number" class="textoItem2" [(ngModel)]="i.qtd" (blur)="validCamp(ind)"> 
+        <button ion-button class="botaoLista" (click)="incrementQtd(ind)"> + </button>
       </td>
     </tr>
 
     <tr>
-      <td style="float: right;">Observação:</td>
-      <td><textarea [(ngModel)]="i.obs" rows="5" cols="30" class="texto4"></textarea></td>
+      <td style="float: right;"> Observação: </td>
+      <td> <textarea [(ngModel)]="i.obs" rows="5" cols="30" class="texto4"> </textarea></td>
     </tr>    
   </table>
-  <button ion-button color="secondary" (click)="adicionarOutroItem()"> + Itens</button>
+  <button ion-button color="secondary" (click)="addOtherItem()" 
+          [disabled]="itensAdd[itensAdd.length-1].nome_item == null || itensAdd[itensAdd.length-1].nome_item == '' "> + Itens
+  </button>
   <br /><br /><br />
-  <button ion-button full style="margin-bottom: 3%;" (click)="addItem()">Salvar</button>
-  <button ion-button full color="danger" (click)="removeItem()">Deletar</button>
-
+  <button ion-button full style="margin-bottom: 3%;" (click)="addItemBd()"
+          [disabled]="itensAdd[itensAdd.length-1].nome_item == null || itensAdd[itensAdd.length-1].nome_item == ''">
+     Salvar 
+  </button>
 </ion-content>
 
 <ion-content padding *ngIf="editar == true">
   <table>    
     <tr>
       <td>Nome:</td>
-      <td><input class="textoItem" [(ngModel)]="nome_item"> </td>
+      <td><input class="textoItem" [(ngModel)]="item.nome_item"> </td>
     </tr>
 
     <tr>
       <td>Quantidade:</td>
       <td>
-        <button ion-button class="botaoLista" (click)="diminuirQtd()">-</button> 
-        <input class="textoItem2" [(ngModel)]="qtd"/> 
-        <button ion-button class="botaoLista" (click)="aumentarQtd()">+</button>
+        <button ion-button class="botaoLista" (click)="decrementQtd()">-</button> 
+        <input class="textoItem2" [(ngModel)]="item.qtd" (blur)="validCamp(ind)"> 
+        <button ion-button class="botaoLista" (click)="incrementQtd()">+</button>
       </td>
     </tr>
 
     <tr>
       <td style="float: right;">Observação:</td>
-      <td><textarea [(ngModel)]="obs" rows="10" cols="30" style="margin:2% 0%"></textarea></td>
+      <td><textarea [(ngModel)]="item.obs" rows="10" cols="30" style="margin:2% 0%"></textarea></td>
     </tr>   
   </table>
   
   <br /><br /><br />
-  <button ion-button full style="margin-bottom: 3%;" (click)="addItem()">Salvar</button>
+  <button ion-button full style="margin-bottom: 3%;" (click)="addItemBd()">Salvar</button>
   <button ion-button full color="danger" (click)="removeItem()">Deletar</button>
 </ion-content>
+
