--- a/src/pages/cadastro-login/cadastro-login.html
+++ b/src/pages/cadastro-login/cadastro-login.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title style="text-align: center;">Cadastro</ion-title>
+    <ion-title style="text-align:center; margin-right: 9%;">Cadastro</ion-title>
   </ion-navbar>
 </ion-header>
 
