--- a/src/pages/modal/modal.html
+++ b/src/pages/modal/modal.html
@@ -3,8 +3,8 @@
   <p class="fontModal" style="font-weight: bold;">{{list.nome_lista}}</p>
   <ion-grid>
     <ion-row col-12>
-      <ion-col col-6 class="alignModal"> <button class="btModal" ion-button color="secondary" (click)="closeModal(true)" >SIM</button> </ion-col>
-      <ion-col col-6 class="alignModal"> <button class="btModal" ion-button color="danger" (click)="closeModal(false)">NÃO</button> </ion-col>
+      <ion-col col-6 class="alignModal"> <button class="btModal" ion-button color="danger" (click)="closeModal(true)" >SIM</button> </ion-col>
+      <ion-col col-6 class="alignModal"> <button class="btModal" ion-button color="secondary" (click)="closeModal(false)">NÃO</button> </ion-col>
     </ion-row>       
   </ion-grid> 
 
