--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 
 <ion-header *ngIf="usuario != null">
   <ion-navbar>
-    <ion-title style="text-align:center">Listas</ion-title>
+    <ion-title style="text-align:center;">Listas</ion-title>
   </ion-navbar>
 </ion-header>
 
