--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,7 @@
 
 <ion-header *ngIf="autenticado == false">
   <ion-navbar>
-    <ion-title style="text-align: center;">Login</ion-title>
+    <ion-title style="text-align:center; margin-right: 9%;">Login</ion-title>
   </ion-navbar>
 </ion-header>
 
