--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>perfil</ion-title>
+    <ion-title style="text-align:center; margin-right: 9%;">perfil</ion-title>
   </ion-navbar>
 </ion-header>
 
