--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-grid>
+  <ion-grid style="margin-top: -6%;" >
     <ion-row>
       <ion-col col-4 style="text-align:left; font-size: 18px; font-weight: bold">
         <p>Item</p>
